# image-retrieval

./: CMakeLists.txt  README.md  color_retrieval.cpp  display_image.cpp  image_retrieval.cpp  image_retrieval.hpp  image_retrieval_main.cpp  shape_retrieval.cpp  shape_retrieval_2.cpp
